--- a/styles/style.css
+++ b/styles/style.css
@@ -77,12 +77,12 @@ button:active {
     background-color: #e0f2f1;
 }
 
-#start {
+#translation {
     color: #3f51b5;
     border: 1px solid #3f51b5;
 }
 
-#start:hover {
+#translation:hover {
     background-color: #e8eaf6;
 }
 
